--- a/src/App.css
+++ b/src/App.css
@@ -31,8 +31,8 @@ body {
 
 @media (min-width:768px) {
   .wrapper {
-    height: 50rem;
-    width: 25rem;
+    /* height: 50rem;
+    width: 25rem; */
     border-radius: 40px;
     border: 10px solid #2e2e2e;
   }
