add task function added

--- a/src/App.css
+++ b/src/App.css
@@ -30,6 +30,11 @@ body {
 }
 
 @media (min-width:768px) {
+
+  /* body {
+    display: block;
+  } */
+
   .wrapper {
     height: 50rem;
     width: 25rem;
