--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,53 @@ body {
   }
 }
 
+.images {
+  overflow-y: hidden;
+  overflow-x: auto;
+  height: 5rem;
+  display: flex;
+  flex-wrap: nowrap;
+  padding: 5px 0px;
+  margin: 0px 10px;
+}
+
+.images::-webkit-scrollbar {
+  height: 10px;
+  /* Custom scrollbar width for images */
+}
+
+.images::-webkit-scrollbar-thumb {
+  background-color: #ccc;
+  /* Custom scrollbar color */
+  border-radius: 4px;
+  /* Rounded scrollbar thumb */
+}
+
+.images::-webkit-scrollbar-thumb:hover {
+  background-color: #888;
+  /* Darker color on hover */
+}
+
+.images::-webkit-scrollbar-track {
+  background-color: #f1f1f1;
+  /* Track color */
+}
+
+.images img {
+  width: 50px;
+  height: 50px;
+  margin: 5px;
+  cursor: pointer;
+  border: 2px solid transparent;
+  border-radius: 5px;
+  transition: transform 0.3s, border-color 0.3s;
+}
+
+.images img.selected {
+  border-color: #39a6f0;
+  transform: scale(1.1);
+}
+
 .wrapper .screen {
   min-width: 100%;
   flex: 1;
