--- a/src/App.css
+++ b/src/App.css
@@ -43,7 +43,12 @@ body {
   }
 }
 
-.images {
+.no-categories {
+  font-size: 1.2rem;
+  font-weight: bold;
+}
+
+.category-images {
   overflow-y: hidden;
   overflow-x: auto;
   height: 5rem;
@@ -53,29 +58,29 @@ body {
   margin: 0px 10px;
 }
 
-.images::-webkit-scrollbar {
+.category-images::-webkit-scrollbar {
   height: 10px;
   /* Custom scrollbar width for images */
 }
 
-.images::-webkit-scrollbar-thumb {
+.category-images::-webkit-scrollbar-thumb {
   background-color: #ccc;
   /* Custom scrollbar color */
   border-radius: 4px;
   /* Rounded scrollbar thumb */
 }
 
-.images::-webkit-scrollbar-thumb:hover {
+.category-images::-webkit-scrollbar-thumb:hover {
   background-color: #888;
   /* Darker color on hover */
 }
 
-.images::-webkit-scrollbar-track {
+.category-images::-webkit-scrollbar-track {
   background-color: #f1f1f1;
   /* Track color */
 }
 
-.images img {
+.category-images img {
   width: 50px;
   height: 50px;
   margin: 5px;
@@ -85,7 +90,7 @@ body {
   transition: transform 0.3s, border-color 0.3s;
 }
 
-.images img.selected {
+.category-images img.selected {
   border-color: #39a6f0;
   transform: scale(1.1);
 }
@@ -188,6 +193,7 @@ body {
   cursor: pointer;
   display: flex;
   justify-content: space-between;
+  align-items: center;
   box-shadow: 0 10px 20px 5px #00000023;
   transition: all 0.3s;
 
@@ -230,15 +236,27 @@ body {
 }
 
 .category .toggle-btn {
-  width: 2rem;
+  min-width: 2.3rem;
+  height: 2.3rem;
+  padding: 0.5rem;
+  border-radius: 50%;
+  color: #2e2e2e;
   cursor: pointer;
+  background-color: rgba(0, 0, 0, 0.031);
   opacity: 0.6;
+  visibility: hidden;
+  transition: all 0.3s;
+}
+
+.category:hover .toggle-btn {
+  opacity: 1;
+  visibility: visible;
 }
 
 .category .toggle-btn:hover {
-  opacity: 1;
+  color: red;
+  background-color: rgba(0, 0, 0, 0.1);
 }
-
 
 /* Category Screen */
 .category-screen .head-wrapper {
@@ -290,7 +308,6 @@ body {
   justify-content: space-between;
   align-items: center;
 }
-
 
 
 .task {
@@ -399,9 +416,14 @@ body {
 
 .add-task-btn.active {
   z-index: 1;
-  bottom: 20rem;
+  bottom: 22rem;
   transform: rotate(45deg);
 }
+
+.add-task-btn.add-tasks-btm {
+  bottom: 15rem;
+}
+
 
 .add-task-btn svg {
   width: 2rem;
@@ -424,6 +446,7 @@ body {
 .add-task .heading {
   font-size: 1.5rem;
   margin-bottom: 1rem;
+  position: relative;
 }
 
 .input-group {
@@ -478,13 +501,20 @@ button.add-btn {
   color: #fff
 }
 
+.add-tasks {
+  height: 15rem;
+}
+
+.add-categories {
+  height: 22rem;
+}
+
 .add-task-backdrop {
   position: absolute;
   bottom: 0;
   left: 50%;
   transform: translateX(-50%);
   width: 135%;
-  height: 20rem;
   border-radius: 50% 50% 0 0;
   background-color: #fff;
 }
