--- a/src/App.css
+++ b/src/App.css
@@ -228,6 +228,8 @@ body {
   opacity: 0;
   visibility: hidden;
   transition: all 0.3s;
+  display: flex;
+  gap: 10px;
 }
 
 .category:hover .options {
@@ -235,7 +237,8 @@ body {
   visibility: visible;
 }
 
-.category .toggle-btn {
+.category .toggle-btn,
+.edit-btn {
   min-width: 2.3rem;
   height: 2.3rem;
   padding: 0.5rem;
@@ -248,13 +251,19 @@ body {
   transition: all 0.3s;
 }
 
-.category:hover .toggle-btn {
+.category:hover .toggle-btn,
+.category:hover .edit-btn {
   opacity: 1;
   visibility: visible;
 }
 
 .category .toggle-btn:hover {
   color: red;
+  background-color: rgba(0, 0, 0, 0.1);
+}
+
+.category .edit-btn:hover {
+  color: #39a6f0;
   background-color: rgba(0, 0, 0, 0.1);
 }
 
@@ -364,7 +373,8 @@ body {
   opacity: 0.6;
 }
 
-.task-wrapper .delete {
+.task-wrapper .delete,
+.task-wrapper .edit {
   min-width: 2rem;
   height: 2rem;
   padding: 0.5rem;
@@ -377,7 +387,8 @@ body {
   transition: all 0.3s;
 }
 
-.task-wrapper:hover .delete {
+.task-wrapper:hover .delete,
+.task-wrapper:hover .edit {
   opacity: 1;
   visibility: visible;
 }
@@ -385,6 +396,18 @@ body {
 .task-wrapper .delete:hover {
   color: red;
   background-color: rgba(0, 0, 0, 0.1);
+}
+
+.task-wrapper .edit:hover {
+  color: #39a6f0;
+  background-color: rgba(0, 0, 0, 0.1);
+  /* stroke: currentColor;
+  fill: #39a6f0; */
+}
+
+.side-btn {
+  display: flex;
+  gap: 15px;
 }
 
 .no-tasks {
