--- a/src/App.css
+++ b/src/App.css
@@ -296,6 +296,57 @@ body {
   opacity: 0.6;
 }
 
+.dropdown-menu {
+  position: absolute;
+  top: 40px;
+  right: 0;
+  background: white;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  z-index: 100;
+}
+
+.dropdown-item {
+  padding: 10px 15px;
+  cursor: pointer;
+  font-size: 14px;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background: #f4f4f4;
+}
+
+.confirm-btn {
+  background-color: #28a745;
+}
+
+.cancel-btns {
+  background-color: #dc3545;
+
+}
+
+.alert-btn {
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  padding: 5px 10px;
+  cursor: pointer;
+  margin-top: 10px;
+}
+
+.alert-box {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+}
+
+.alert-box-btn {
+  display: flex;
+  gap: 10rem
+}
+
 /* tasks */
 .tasks-wrapper {
   padding: 0 30px;
@@ -401,8 +452,6 @@ body {
 .task-wrapper .edit:hover {
   color: #39a6f0;
   background-color: rgba(0, 0, 0, 0.1);
-  /* stroke: currentColor;
-  fill: #39a6f0; */
 }
 
 .side-btn {
