--- a/src/App.css
+++ b/src/App.css
@@ -148,9 +148,9 @@ body {
   transform: translateX(-100%);
 }
 
-.wrapper.show-category .category-screen {
+/* .wrapper.show-category .category-screen {
   transform: translateX(-100%);
-}
+} */
 
 .wrapper.show-category .screen-backdrop {
   transform: translate(-50%, -60%)
@@ -328,7 +328,7 @@ body {
 
 .dropdown-menu {
   position: absolute;
-  top: 40px;
+  top: 60px;
   right: 0;
   background: white;
   border: 1px solid #ccc;
